Updated index.html with [brief description of changes]

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <article>
 
                 <h2>Tanmay Verma</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, nulla ea eum nostrum praesentium animi tenetur laborum, alias commodi maiores molestiae atque earum ipsa corporis laboriosam libero! Repellendus, atque repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, nulla ea eum nostrum praesentium animi tenetur laborum, alias commodi maiores molestiae atque earum ipsa corporis laboriosam libero! Repellendus, atque repellat.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam delectus necessitatibus consequuntur minus animi suscipit placeat numquam iste dolor ex? Porro, expedita nulla.
+                </p>
                 
             </article>
             <figure>
@@ -31,7 +33,7 @@
             </figure>
         </section>
        <footer>
-        <p> &copy; 2024 all rights reserved </p> 
+        <p> &copy; 2024 all rights reserved --y </p> 
        </footer>
     </body>
 </html>
